[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exceiver"
authors = [{name = "William Connell", email = "connell@keiserlab.org"}, {name = "Umair Khan", email = "ukhan@keiserlab.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "torch >=1.12.0",
    "pytorch-lightning >=1.6.5",
    "scanpy >=1.9.1",
    "scikit-learn >=1.1.1",
    "pandas >=1.4.3",
    "numpy >=1.22.4",
]

[project.urls]
Home = "https://github.com/keiserlab/exceiver"
